--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,21 @@
       "xstddef": "c",
       "type_traits": "c",
       "utility": "c"
-    }
+    },
+    "workbench.colorCustomizations": {
+      "activityBar.background": "#d668e6",
+      "activityBar.activeBorder": "#6d6212",
+      "activityBar.foreground": "#15202b",
+      "activityBar.inactiveForeground": "#15202b99",
+      "activityBarBadge.background": "#6d6212",
+      "activityBarBadge.foreground": "#e7e7e7",
+      "titleBar.activeBackground": "#ca3cdf",
+      "titleBar.inactiveBackground": "#ca3cdf99",
+      "titleBar.activeForeground": "#e7e7e7",
+      "titleBar.inactiveForeground": "#e7e7e799",
+      "statusBar.background": "#ca3cdf",
+      "statusBarItem.hoverBackground": "#d668e6",
+      "statusBar.foreground": "#e7e7e7"
+    },
+    "peacock.color": "#ca3cdf"
 }
